<resources>
    <string name="app_name">SparkCarCleaner</string>
    <string name="title_activity_main">Spark Car Cleaner</string>
    <string name="confirm">confirm</string>
    <string name="total_cost">total cost: SAR %s</string>
    <string name="this_is_a_test_application_on_the_cleaner_side">this is a test application on the cleaner side</string>
    <string name="your_name">your name</string>
    <string name="mobile_number">mobile number</string>
    <string name="enter_your_email">enter your email</string>
    <string name="save">save</string>
    <string name="reset_password">Reset Password</string>
    <string name="share_this_at">share this at</string>
    <string name="facebook">facebook</string>
    <string name="whatsapp">whatsapp</string>
    <string name="phone">phone</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="user_name">user_name</string>
    <string name="user_mobile_number">user mobile number</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>
    <!-- ... -->
    <string name="facebook_application_id" translatable="false">515832225450570</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb515832225450570</string>
    <string name="sign_out">Sign out</string>
    <string name="Home">Home</string>
    <string name="Messages">Messages</string>
    <string name="Profile">Profile</string>
    <string name="Social">Social</string>
    <string name="About">About</string>
    <string name="Share">Share</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="busy">Busy</string>
    <string name="display_mobile_number">Mobile: %s</string>
    <string name="status_s">Status: %s</string>
    <string name="order_of_customer">Order of Customer: %s</string>
    <string name="customer_name_s">Customer Name: %s</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="picture_status_s">Picture Status: %s</string>
    <string name="confirm_task">Confirm Task</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="picture_of_car_after_cleaning">Picture of car after cleaning</string>
    <string name="from_s">from: %s</string>
    <string name="title_s">Title: %s</string>
    <string name="date_s">Date: %s</string>
    <string name="to">To:</string>
    <string name="title">Title</string>
    <string name="your_message_here">Your Message here</string>
    <string name="send_message">Send Message</string>
    <string name="message">Message:</string>
    <string name="send">Send</string>
</resources>
