<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="180dp"
                                             android:background="@drawable/head_background">

    <ImageView
        android:id="@+id/id_image"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/user_profile_picture"
        android:src="@drawable/blank_image"
        app:layout_constraintEnd_toStartOf="@+id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mobile_phone"
        android:layout_marginEnd="97dp"
        android:layout_marginTop="16dp"
        android:hint="@string/user_name"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_image"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/mobile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@id/id_image"
        android:hint="@string/user_mobile_number"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_name"/>
</android.support.constraint.ConstraintLayout>